@@ -1,0 +1,5 @@
+#! /bin/sh
+
+autoreconf -v --install || exit 1
+
+./configure "$@"
